ch09/9-4/appimage_svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: appimage
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: appimage
