ch09/9-4/appimage_route.yml
apiVersion: v1
kind: Route
metadata:
  name: appimage
spec:
  host: 
  to:
    kind: Service
    name: appimage
